--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Payment Provider</h1>
 <form id="payment-form">
     <label for="payment-method">Wybierz metodę płatności:</label>
     <select id="payment-method">
