--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>Payment Provider</h1>
 <form id="payment-form">
-    <label for="payment-method">Wybierz metodę płatności:</label>
+    <label for="payment-method" style="font-weight: 900;">Wybierz metodę płatności:</label>
     <select id="payment-method">
         <option value="creditCard">Karta kredytowa</option>
         <option value="paypal">PayPal</option>
